He añadido alguna cosilla mas

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     <h1>Discover wonder places in the world around you</h1>
+    <a href="#"><h2>Download excursion (Coming soon!)</h4></a>
+    
+    <div class="video">
+        <video>
+            <source src="excursion.mp4" autoplay loop type="video/mp4">
+        </video>
+    </div>
 </body>
 </html>
