--- a/index.html
+++ b/index.html
@@ -16,5 +16,16 @@
             <source src="excursion.mp4" autoplay loop type="video/mp4">
         </video>
     </div>
+    <div class="photo">
+    <h1>Your personal travel guide</h1>
+    <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+    <img src="/resources/landscape.webp">
+    </div>
+    <div class="end">
+        <span class="icon"></span>
+        <h1>Coming soon for Iphone and Android</h1>
+        <a href="#""><h2>Download excursion (Cooming Soon!)</h2></a>
+        <h2 class="grey">@ Excursion</h2>
+    </div>
 </body>
 </html>
