--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EXCURSION</title>
-    <link type="text/css" rel="stylesheet" href="resources/CSS/styles.css"
+    <link type="text/css" rel="stylesheet" href="./resources/CSS/styles.css"
 </head>
 <body>
     <h1>Discover wonder places in the world around you</h1>
