--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="#"><h2>Download excursion (Coming soon!)</h4></a>
     
     <div class="video">
-        <video>
+        <video autoplay muted loop>
             <source src="excursion.mp4" autoplay loop type="video/mp4">
         </video>
     </div>
