--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="photo">
     <h1>Your personal travel guide</h1>
     <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
-    <img src="resources/landscape.webp">
+    <img src="/resources/landscape.webp">
     </div>
     <div class="end">
         <span class="icon"></span>
